# YTDownloadTracker

./: .gitignore  README.md  SAM.ipynb  add_count.py  dia.py  downloadYT.py  findingnemo.py  main.py  pyannote_demo.py  pyannote_ui.py  pyproject.toml
libs/: diar_sortformer_4spk_v2.1.ipynb  getData.md  quickrun.md  uvspell.md
modalDeploy/: XTTSv2.py  XTTSv2_ft.py
nemo_outputs/: oracle_manifest.json
src/: metadata.py  quality.py
src/getData/: downloadYouTube.py  importLocal.py  qualityPreset.py
