[project]
name = "speechgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2023.11.16",
    "pydub>=0.25.1",
    "pyannote-audio>=4.0.4",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchcodec>=0.1.0",
    "soundfile>=0.13.1",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }

