[project]
name = "speechgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "yt-dlp>=2023.11.16",
]

[[tool.uv.index]]
name = "default"
url = "https://pypi.org/simple"
explicit = true

[tool.uv.sources]
default = { index = "default" }

